--- a/src/index.css
+++ b/src/index.css
@@ -6,22 +6,25 @@
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: 'Poppins';
-  font-weight: 400;
-  src: url('/assets/fonts/Poppins-Regular.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Poppins';
-  font-weight: 600;
-  src: url('/assets/fonts/Poppins-SemiBold.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Poppins';
-  font-weight: 700;
-  src: url('/assets/fonts/Poppins-Bold.ttf') format('truetype');
+@layer base {
+  @font-face {
+    font-family: 'Poppins';
+    font-weight: 700;
+    src: url('/assets/fonts/Poppins-Bold.ttf') format('truetype');
+    font-display: 'swap';
+  }
+  @font-face {
+    font-family: 'Poppins';
+    font-weight: 600;
+    src: url('/assets/fonts/Poppins-SemiBold.ttf') format('truetype');
+    font-display: 'swap';
+  }
+  @font-face {
+    font-family: 'Poppins';
+    font-weight: 400;
+    src: url('/assets/fonts/Poppins-Regular.ttf') format('truetype');
+    font-display: 'swap';
+  }
 }
 
 .toggle {
