--- a/src/index.css
+++ b/src/index.css
@@ -70,14 +70,19 @@ body::-webkit-scrollbar-thumb {
   @apply relative block;
   padding: 0.5rem 0.5rem;
   line-height: 1;
+  color: transparent;
+  animation: animate-title-2 9s infinite;
+  animation-delay: var(--delay);
 }
 
 .title::before {
   content: var(--content);
-  position: absolute;
   background-image: linear-gradient(90deg, var(--bg-start), var(--bg-end));
-  @apply bg-clip-text text-transparent;
+  position: absolute;
   inset: 0;
+  @apply bg-clip-text;
+  -webkit-text-fill-color: transparent;
+
   padding: 0.5rem 0.5rem;
   animation: animate-title 9s infinite;
   animation-delay: var(--delay);
@@ -93,6 +98,19 @@ body::-webkit-scrollbar-thumb {
   33.333%,
   83.333% {
     opacity: 0;
+  }
+}
+
+@keyframes animate-title-2 {
+  0%,
+  16.667%,
+  100% {
+    color: transparent;
+  }
+
+  33.333%,
+  83.333% {
+    color: inherit;
   }
 }
 
