add movie search movie

--- a/src/index.css
+++ b/src/index.css
@@ -373,4 +373,8 @@ input:checked + .toggle .star--6 {
   .logo-dark {
     filter: invert(100%);
   }
+
+  .h-fill-available {
+    height: -webkit-fill-available;
+  }
 }
